#
#
#
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
MESSAGE( STATUS "Builds Fxload for Unix/MacOSX" )

IF(APPLE)
   #SET(GUI_TYPE MACOSX_BUNDLE)
   INCLUDE_DIRECTORIES ( macos )
   # FIND_LIBRARY(CARBON_LIBRARY Carbon)
   FIND_LIBRARY( IOKIT_LIBRARY IOKit )
   FIND_LIBRARY( FOUNDATION_LIBRARY  Foundation )
   MARK_AS_ADVANCED(IOKIT_LIBRARY )
   FILE( GLOB SRC_FILES ABSOLUTE "macos/*.m") 
   SET_SOURCE_FILES_PROPERTIES(
    ${SRC_FILES}
    PROPERTIES LANGUAGE C
    )
  ADD_EXECUTABLE( fxload ${SRC_FILES} )
  SET_TARGET_PROPERTIES(
    fxload
    PROPERTIES
    XCODE_ATTRIBUTE_GCC_PREFIX_HEADER "macos/fxload-osx_Prefix.pch"
    XCODE_ATTRIBUTE_GCC_PRECOMPILE_PREFIX_HEADER "YES"
    )

   SET( EXTRA_LIBS ${IOKIT_LIBRARY} ${FOUNDATION_LIBRARY} )
ELSEIF( UNIX ) 
  INCLUDE_DIRECTORIES ( unix )
  FILE(GLOB SRC_FILES ABSOLUTE "unix/*.c" )
  ADD_EXECUTABLE( fxload ${SRC_FILES} )
ENDIF (APPLE)

TARGET_LINK_LIBRARIES( fxload ${EXTRA_LIBS} )
